Revision history for Perl extension PGXN::API

0.16.5

0.16.4  2016-06-15T16:10:33Z
      - Fixed a bug where v1.0.0 Semantic Versions were not matched in synced
        file names and directories.
      - Fixed a bug that tried to read an extension JSON file case-sentiively.
      - Fixed test failures due to a change in the generation of JSONP
        responses in Plack 1.0031.
      - Fixed a bug where the "pgxnbod" ID of a cleaned HTML element could be
        removed if the last element in the body was removed.

0.16.3  2013-06-19T06:31:51Z
      - Updated URI::Template to v0.16 for its support for `{+var}` and
        dropped the nasty hack required to work around the lack of it in
        earlier versions.
      - Updated GitHub URLs to point to `/pgxn/` rather than `/theory/`.
      - Fixed a bug on the HTML documentation table of contents generator
        where it would choke on finding an `h1` after an `h3`.
      - Fixed test failures due to a change in the API of Email::Sender.
      - Removed the Pod tests from the distribution.
      - Eliminated smartmatch warnings on Perl 5.18.

0.16.2  2012-02-14T06:46:47Z
      - Empty Documentation files are no longer indexed or displayed.
      - All files extracted from distribution zip files into the source
        directory are now globally readable. This behavior eliminates
        permissions errors when the user that serves the files is different
        than the one that unzipped them.
      - Files specified in the `docfile` key are now ignored if Text::Markup
        does not recognize them, since they cannot then be parsed for serving
        as HTML.
      - Worked around an [Archive::Zip
        bug](https://rt.cpan.org/Ticket/Display.html?id=74255.) when reading
        the README file for indexing.

0.16.1  2012-01-10T04:30:02Z
      - Added `version_string` class method to PGXN::API. It should always be
        used for displaying the version.
      - Added `Capfile` for capistrano deployment.